# task-management

./: Cargo.toml  README.md  demo.cast  dist-workspace.toml
.github/workflows/: release.yml
docs/: mcp-design.md  notes-timeline-design.md  xdg-linking-design.md
src/: db.rs  lib.rs  main.rs  models.rs
src/mcp/: server.rs  tools.rs
tests/: backup_test.rs  fts_test.rs  integration_test.rs  json_shortid_test.rs  linking_test.rs  mcp_test.rs  migration_v5_test.rs  namespace_prune_test.rs  template_cli_test.rs  template_test.rs  v021_patch_test.rs  xdg_path_test.rs
