[package]
name = "task-management"
version = "0.2.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rmcp = { version = "1.5", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros", "io-std"] }
schemars = "0.8"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
